# sideseat

./: .dockerignore  .env.example  .gitattributes  .gitignore  .rustfmt.toml  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  defaults.toml  pyproject.toml
misc/mcp/: calculator.py  pyproject.toml
misc/replay/: __init__.py  generate_load.py  main.py  pyproject.toml
misc/samples/python/: DESIGN.md  README.md  pyproject.toml
misc/samples/python/adk/: __main__.py  cli.py  config.py  pyproject.toml  runner.py
misc/samples/python/agent-framework/: __init__.py  __main__.py  cli.py  config.py  pyproject.toml  runner.py  telemetry_setup.py
misc/samples/python/anthropic/: __main__.py  cli.py  config.py  pyproject.toml  runner.py  telemetry_setup.py
misc/samples/python/autogen/: __main__.py  cli.py  config.py  pyproject.toml  runner.py  telemetry_setup.py
misc/samples/python/bedrock/: __main__.py  cli.py  config.py  pyproject.toml  runner.py  telemetry_setup.py
misc/samples/python/common/: pyproject.toml
misc/samples/python/crewai/: __main__.py  cli.py  config.py  pyproject.toml  runner.py  telemetry_setup.py
misc/samples/python/langgraph/: __init__.py  __main__.py  cli.py  config.py  pyproject.toml  runner.py  telemetry_setup.py
misc/samples/python/loadtest/: generator.py  pyproject.toml
misc/samples/python/openai/: __main__.py  cli.py  config.py  pyproject.toml  runner.py
misc/samples/python/openai-agents/: __init__.py  __main__.py  cli.py  config.py  pyproject.toml  runner.py  telemetry_setup.py
misc/samples/python/strands/: README.md  __main__.py  cli.py  config.py  pyproject.toml  runner.py  telemetry_setup.py
samples/strands/: README.md  pyproject.toml
samples/strands/simple/: main.py  pyproject.toml
samples/strands/src/: complex.py  e2e.py  proxy.py  telemetry.py
sdk/python/: CHANGELOG.md  LICENSE  README.md  pyproject.toml
sdk/python/src/sideseat/: __init__.py  _utils.py  config.py  instrumentation.py
sdk/python/tests/: __init__.py  conftest.py  test_aws_instrumentation.py  test_config.py  test_instrumentation.py  test_processors.py  test_runtime_adapters.py  test_runtime_client.py  test_runtime_invoke.py  test_runtime_protocol.py  test_telemetry.py
sdk/rust/: Cargo.toml  README.md
sdk/rust/src/: error.rs  lib.rs  provider.rs  types.rs
sdk/rust/src/inference/: env.rs  error.rs  mcp.rs  middleware.rs  mock.rs  provider.rs  registry.rs  telemetry.rs  test_models.rs  types.rs
sdk/rust/src/providers/: anthropic.rs  bedrock.rs  cohere.rs  gemini.rs  gemini_interactions.rs  openai_chat.rs  openai_responses.rs  sse.rs
sdk/rust/tests/: anthropic.rs  bedrock.rs  bedrock_openai.rs  cohere.rs  gemini.rs  gemini_interactions.rs  mistral.rs  openai.rs  providers.rs  unit.rs  xai.rs
sdk/rust/tests/common/: mod.rs
server/: Cargo.toml  entitlements.plist  sideseat.example.json  sideseat.example.server.json  sideseat.schema.json
server/data/: model_prices_and_context_window.json
server/protocol/ws-v1/: chunking.md  codes.md  invoke-flow.md  schema.json
server/src/: app.rs  config.rs  embedded.rs  error.rs  lib.rs  main.rs  middleware.rs  server.rs
server/src/a2a/: client.rs  debugger.rs  mod.rs
server/src/api/: auth.rs  embedded.rs  extractors.rs  health.rs  middleware.rs  mod.rs  openapi.rs  rate_limit.rs  routes.rs  server.rs  types.rs
server/src/api/auth/: api_key.rs  context.rs  extractors.rs  jwt.rs  manager.rs  middleware.rs  mod.rs
server/src/api/mcp/: mod.rs  tools.rs  types.rs
server/src/api/otel/: collector.rs  mod.rs  sessions.rs  spans.rs  sse.rs  traces.rs  types.rs
server/src/api/routes/: auth.rs  health.rs  mod.rs  pricing.rs
server/src/auth/: bootstrap.rs  jwt.rs  manager.rs  middleware.rs  mod.rs
server/src/core/: banner.rs  cli.rs  config.rs  constants.rs  mod.rs  secret.rs  secrets.rs  shutdown.rs  storage.rs  update.rs  utils.rs
server/src/data/: cleanup.rs  dedup.rs  error.rs  mod.rs  traits.rs
server/src/data/cache/: backend.rs  error.rs  key.rs  memory.rs  mod.rs  rate_limiter.rs  redis.rs
server/src/data/clickhouse/: error.rs  mod.rs  repository_impl.rs  schema.rs
server/src/data/duckdb/: error.rs  migrations.rs  mod.rs  models.rs  repository_impl.rs  retention.rs  schema.rs  sql_types.rs
server/src/data/files/: cleanup.rs  error.rs  filesystem.rs  mod.rs  s3.rs  storage.rs
server/src/data/postgres/: error.rs  migrations.rs  mod.rs  repository_impl.rs  schema.rs
server/src/data/registrations/: mod.rs
server/src/data/secrets/: aws.rs  cached.rs  data_protection_keychain.rs  env.rs  error.rs  file.rs  hashicorp.rs  keyring.rs  mod.rs  provider.rs  types.rs
server/src/data/sql/: clickhouse_dialect.rs  dialect.rs  duckdb_dialect.rs  mod.rs  postgres_dialect.rs  sqlite_dialect.rs
server/src/data/sqlite/: error.rs  migrations.rs  mod.rs  repository_impl.rs  schema.rs
server/src/data/topics/: backend.rs  error.rs  memory.rs  mod.rs  pubsub.rs  redis.rs
server/src/data/types/: analytics.rs  enums.rs  messages.rs  mod.rs  normalized.rs  stats.rs  transactional.rs
server/src/db/: mod.rs
server/src/domain/: mod.rs
server/src/domain/metrics/: extract.rs  mod.rs  persist.rs  pipeline.rs
server/src/mcp/: client.rs  debugger.rs  mod.rs  server.rs
server/src/otel/: collector.rs  disk.rs  error.rs  exporter.rs  health.rs  mod.rs  processor.rs
server/src/prompts/: analyzer.rs  mod.rs  optimizer.rs  tracker.rs
server/src/proxy/: anthropic.rs  mod.rs  openai.rs  streaming.rs  transformer.rs
server/src/server/: banner.rs  embedded.rs  grpc.rs  handlers.rs  middleware.rs  mod.rs
server/src/sqlite/: error.rs  migrations.rs  mod.rs  schema.rs
server/src/utils/: api_key.rs  clickhouse.rs  crypto.rs  debug.rs  file.rs  file_uri.rs  json.rs  mime.rs  mod.rs  otlp.rs  retry.rs  serde.rs  sql.rs  string.rs  terminal.rs  time.rs
server/tests/unit/: health_test.rs
tests/e2e/: __init__.py  config.yaml  pyproject.toml  run.sh  test_otel_e2e.py  test_runner.py
tests/e2e/src/: __init__.py  api.py  base.py  config.py  logging.py  server.py  strands.py
(+919 files in other folders)
