[workspace]
members = ["server"]
resolver = "2"

[workspace.dependencies]
axum = "0.8"
tokio = { version = "1.48", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors", "trace", "decompression-gzip"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = [
  "runtime-tokio-rustls",
  "sqlite",
  "migrate",
] }
config = "0.15"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
clap = { version = "4.5", features = ["derive"] }
rust-embed = { version = "8.8", features = ["compression"] }
reqwest = { version = "0.12", features = [
  "json",
  "stream",
  "rustls-tls",
], default-features = false }
async-stream = "0.3"
futures = "0.3"
thiserror = "2.0"
anyhow = "1.0"
mime_guess = "2.0"
directories = "6.0.0"
dirs = "6.0"
chrono = { version = "0.4", features = ["serde"] }
keyring = { version = "3.6", default-features = false, features = [
  "apple-native",
  "windows-native",
  "linux-native",
  "sync-secret-service",
  "crypto-rust",
] }
local-ip-address = "0.6"
supports-hyperlinks = "3"
jsonwebtoken = "9"
rand = "0.8"
subtle = "2"
axum-extra = { version = "0.10", features = ["cookie"] }
uuid = { version = "1.11", features = ["v4"] }
time = "0.3"

# OpenTelemetry dependencies
arrow = { version = "54", default-features = false, features = ["ipc"] }
parquet = { version = "54", default-features = false, features = [
  "arrow",
  "async",
  "snap",
  "zstd",
] }
datafusion = "44"
opentelemetry-proto = { version = "0.28", features = [
  "trace",
  "metrics",
  "logs",
  "gen-tonic-messages",
  "gen-tonic",
] }
prost = "0.13"
tonic = { version = "0.12", features = ["transport"] }
tokio-stream = { version = "0.1", features = ["sync"] }
base64 = "0.22"
hex = "0.4"
regex = "1.11"
fs2 = "0.4"
sha2 = "0.10"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.release.package."*"]
opt-level = 3
