[workspace]
members = ["server", "sdk/rust"]
resolver = "2"

[workspace.dependencies]
axum = "0.8"
tokio = { version = "1.49", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = [
  "fs",
  "cors",
  "trace",
  "decompression-gzip",
  "compression-gzip",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
sqlx = { version = "0.8.6", features = [
  "runtime-tokio-rustls",
  "sqlite",
  "postgres",
  "migrate",
] }
config = "0.15"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
clap = { version = "4.5", features = ["derive", "env"] }
rust-embed = { version = "8.8", features = ["compression"] }
reqwest = { version = "0.13", features = [
  "json",
  "stream",
  "rustls",
], default-features = false }
async-stream = "0.3"
async-trait = "0.1"
futures = "0.3"
thiserror = "2.0"
anyhow = "1.0"
mime_guess = "2.0"
directories = "6.0.0"
dirs = "6.0"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
keyring = { version = "3.6", default-features = false, features = [
  "apple-native",
  "windows-native",
  "crypto-rust",
] }
# Note: linux-native and sync-secret-service removed for cross-compilation.
# Linux uses file-based secrets by default. Set SIDESEAT_SECRET_BACKEND=file.
local-ip-address = "0.6"
supports-hyperlinks = "3"
jsonwebtoken = "9"
rand = "0.8"
subtle = "2"
axum-extra = { version = "0.10", features = ["cookie"] }
uuid = { version = "1.11", features = ["v4"] }
time = "0.3"

# OpenTelemetry dependencies
opentelemetry-proto = { version = "0.28", features = [
  "trace",
  "metrics",
  "logs",
  "gen-tonic-messages",
  "gen-tonic",
  "with-serde",
] }
prost = "0.13"
tonic = { version = "0.12", features = ["transport"] }
tokio-stream = { version = "0.1", features = ["sync"] }
base64 = "0.22"
hex = "0.4"
regex = "1.11"
fs2 = "0.4"
sha2 = "0.10"
hmac = "0.12"
dashmap = "6.1"
duckdb = { version = "1.4.2", features = ["bundled", "json", "vtab"] }
parking_lot = "0.12"
rustc-hash = "2.1"
validator = { version = "0.20", features = ["derive"] }
cuid2 = "0.1"
utoipa = { version = "5", features = ["axum_extras", "chrono", "uuid"] }
semver = "1.0"

# S3 storage (optional)
aws-sdk-s3 = "1.87"
aws-config = { version = "1.7", features = ["behavior-version-latest"] }

# Cache (moka for in-memory, deadpool-redis for Redis)
moka = { version = "0.12", features = ["future"] }
rmp-serde = "1"
md5 = "0.7"
deadpool-redis = "0.18"

# ClickHouse client
clickhouse = { version = "0.14", features = ["lz4", "time"] }

# MCP server
rmcp = { version = "0.15", features = ["server", "macros", "transport-streamable-http-server"] }
schemars = "1.0"
tokio-util = { version = "0.7", features = ["rt"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.release.package."*"]
opt-level = 3
