[project]
name = "mcp-servers"
version = "0.1.0"
description = "MCP server samples"
requires-python = ">=3.14"
dependencies = [
    "fastmcp>=2.14.4",
]

[project.scripts]
mcp-calculator = "calculator:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
