[package]
name = "sideseat"
version = "0.1.0"
edition = "2024"
description = "AI Development Workbench — Debug, trace, and understand your AI agents"
license = "MIT"
repository = "https://github.com/sideseat/sideseat"
homepage = "https://sideseat.ai"
documentation = "https://sideseat.ai/docs"
keywords = ["ai", "llm", "opentelemetry", "tracing", "observability"]
categories = ["development-tools::debugging", "development-tools::profiling"]
readme = "README.md"

[dependencies]
