[package]
name = "sideseat"
version = "0.1.0"
edition = "2024"
description = "AI Development Workbench — Debug, trace, and understand your AI agents"
license = "Apache-2.0"
repository = "https://github.com/sideseat/sideseat"
homepage = "https://sideseat.ai"
documentation = "https://sideseat.ai/docs"
keywords = ["ai", "llm", "opentelemetry", "tracing", "observability"]
categories = ["development-tools::debugging", "development-tools::profiling"]
readme = "README.md"

[dependencies]
# From workspace
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
async-trait = { workspace = true }
async-stream = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
base64 = { workspace = true }
tokio-stream = { workspace = true }
aws-config = { workspace = true }

# AWS Bedrock
aws-sdk-bedrockruntime = { workspace = true }
aws-sdk-bedrock = { workspace = true }
aws-credential-types = { workspace = true }
aws-smithy-types = "1"
aws-smithy-http = "0.62"

# SSE streaming parser
eventsource-stream = "0.2"

tracing = { workspace = true }
opentelemetry     = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }

# Pin utilities
pin-project-lite = "0.2"

rand = { workspace = true }
parking_lot = { workspace = true }

# MCP client integration
rmcp = { version = "0.16.0", features = ["client"] }

[dev-dependencies]
tokio = { workspace = true }
httpmock = "0.8.3"
crc32fast = "1"
base64 = { workspace = true }
