[project]
name = "adk-sample"
version = "0.1.0"
description = "SideSeat telemetry sample for Google ADK"
requires-python = ">=3.12,<3.14"
dependencies = [
    "telemetry-common",
    "sideseat",
    # google-adk requires opentelemetry-sdk<1.39.0,>=1.36.0
    "google-adk>=1.27.0",
    "litellm>=1.82.1",
    "boto3>=1.42.22",
    "pymupdf>=1.25.0",
    "python-dotenv>=1.2.0",
]

[project.scripts]
# Note: google-adk also installs an `adk` CLI; use telemetry-adk to avoid conflict
telemetry-adk = "cli:main"

[tool.uv]
prerelease = "allow"

[tool.uv.sources]
telemetry-common = { path = "../common", editable = true }
sideseat = { path = "../../../../sdk/python", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["*.py", "samples/"]
