[project]
name = "agent-framework-sample"
version = "0.1.0"
description = "SideSeat telemetry sample for Microsoft Agent Framework"
requires-python = ">=3.12,<3.13"
dependencies = [
    "telemetry-common",
    "sideseat",
    # agent-framework requires opentelemetry-sdk>=1.39.0 (incompatible with google-adk)
    "agent-framework>=1.0.0b0",
    "agent-framework-anthropic>=1.0.0b0",
    "python-dotenv>=1.2.0",
]

[project.scripts]
agent-framework = "cli:main"
telemetry-agent-framework = "cli:main"

[tool.uv]
prerelease = "allow"

[tool.uv.sources]
telemetry-common = { path = "../common", editable = true }
sideseat = { path = "../../../../sdk/python", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["*.py", "samples/"]
