[project]
name = "autogen-sample"
version = "0.1.0"
description = "SideSeat telemetry sample for AutoGen"
requires-python = ">=3.12,<3.14"
dependencies = [
    "telemetry-common",
    "sideseat[autogen]",
    "autogen-agentchat>=0.7.5",
    "autogen-ext[openai,anthropic,mcp]>=0.7.5",
    "pymupdf>=1.25.0",
    "python-dotenv>=1.2.0",
]

[project.scripts]
autogen = "cli:main"
telemetry-autogen = "cli:main"

[tool.uv]
prerelease = "allow"

[tool.uv.sources]
telemetry-common = { path = "../common", editable = true }
sideseat = { path = "../../../../sdk/python", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["*.py", "samples/"]
