[project]
name = "telemetry-common"
version = "0.1.0"
description = "Shared utilities for SideSeat telemetry samples"
requires-python = ">=3.12,<3.14"
dependencies = [
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp-proto-http>=1.20.0",
    # Allow wide range so each framework can pin its own preferred version
    "python-dotenv>=0.19.0",
    "sideseat",
]

[tool.uv.sources]
sideseat = { path = "../../../../sdk/python", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["common"]
