[project]
name = "crewai-sample"
version = "0.1.0"
description = "SideSeat telemetry sample for CrewAI"
requires-python = ">=3.12,<3.14"
dependencies = [
    "telemetry-common",
    "sideseat[crewai]",
    "crewai[bedrock]>=1.6.1",
    "crewai-tools[mcp]>=1.6.1",
    "pymupdf>=1.25.0",
    "boto3>=1.42.22",
    "litellm>=1.82.1",
]

[project.scripts]
crewai = "cli:main"
telemetry-crewai = "cli:main"

[tool.uv]
prerelease = "allow"

[tool.uv.sources]
telemetry-common = { path = "../common", editable = true }
sideseat = { path = "../../../../sdk/python", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["*.py", "samples/"]
