[project]
name = "langgraph-sample"
version = "0.1.0"
description = "SideSeat telemetry sample for LangGraph"
requires-python = ">=3.12,<3.14"
dependencies = [
    "telemetry-common",
    "sideseat[langchain]",
    "langgraph>=1.1.2",
    "langchain-aws>=1.4.0",
    "langchain-anthropic>=1.3.4",
    "langchain-openai>=1.1.11",
    "langchain-google-genai>=4.2.1",
    "langchain-mcp-adapters>=0.2.1",
    "boto3>=1.42.22",
    "opentelemetry-instrumentation-botocore>=0.58b0",
    "pymupdf>=1.25.0",
    "python-dotenv>=1.2.0",
]

[project.scripts]
langgraph = "cli:main"
telemetry-langgraph = "cli:main"

[tool.uv]
prerelease = "allow"

[tool.uv.sources]
telemetry-common = { path = "../common", editable = true }
sideseat = { path = "../../../../sdk/python", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["*.py", "samples/"]
