[project]
name = "loadtest-sample"
version = "0.1.0"
description = "SideSeat load test - generates synthetic OTEL traces"
requires-python = ">=3.12,<3.14"
dependencies = [
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp-proto-http>=1.20.0",
    "tqdm>=4.66.0",
    "python-dotenv>=1.2.0",
]

[project.scripts]
loadtest = "generator:main"

[tool.uv]
prerelease = "allow"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["*.py"]
