[project]
name = "openai-agents-sample"
version = "0.1.0"
description = "SideSeat telemetry sample for OpenAI Agents SDK"
requires-python = ">=3.12,<3.14"
dependencies = [
    "telemetry-common",
    "sideseat[openai-agents]",
    "openai-agents>=0.12.1",
    "python-dotenv>=1.2.0",
]

[project.scripts]
openai-agents = "cli:main"
telemetry-openai-agents = "cli:main"

[tool.uv]
prerelease = "allow"

[tool.uv.sources]
telemetry-common = { path = "../common", editable = true }
sideseat = { path = "../../../../sdk/python", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["*.py", "samples/"]
