[project]
name = "strands-sample"
version = "0.1.0"
description = "SideSeat telemetry sample for Strands Agents"
requires-python = ">=3.12,<3.14"
dependencies = [
    "telemetry-common",
    "sideseat[openai,anthropic]",
    "strands-agents>=1.30.0",
    "strands-agents-tools>=0.2.22",
    "opentelemetry-instrumentation-botocore>=0.58b0",
    "boto3>=1.42.22",
    "litellm>=1.82.1",
    "bedrock-agentcore>=1.4.6",
    "pymupdf>=1.25.0",
    "python-dotenv>=1.2.0",
]

[project.scripts]
strands = "cli:main"

[tool.uv]
prerelease = "allow"

[tool.uv.sources]
telemetry-common = { path = "../common", editable = true }
sideseat = { path = "../../../../sdk/python", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["*.py", "samples/"]
